--- a/_config.yml
+++ b/_config.yml
@@ -325,3 +325,6 @@ defaults:
       comments: # true
       share: true
       related: true
+# Enable navigation data
+navigation:
+  enabled: true
