--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,10 @@
 # main links
 main:
-  - title: "Data"
+  - title: "Advanced Data products"
     url: https://feast-survey.github.io/data_release_post/
-  - title: "People"
+  - title: "Science-ready mosaics"
+    url: https://feast-survey.github.io/data_release_post/
+  - title: "Team"
+    url: https://feast-survey.github.io/
+  - title: "Publications"
     url: https://feast-survey.github.io/
