--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,5 @@ main:
     url: https://feast-survey.github.io/
   - title: "Publications"
     url: https://feast-survey.github.io/
+  - title: "Outreach"
+    url: https://feast-survey.github.io/
