--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,9 +1,9 @@
 - name: Angela Adamo
   role: Principal Investigator
-  image: /images/user.jpg
+  image: /images/user.png
 - name: Helena Faustino Vieira
   role: Postdoc
-  image: /images/user.jpg
+  image: /images/user.png
 - name: Alex Pedrini
   role: PhD Student
-  image: /images/user.jpg
+  image: /images/user.png
