--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,6 +1,10 @@
 - name: Angela Adamo
   role: Principal Investigator
   image: /images/user.png
+- name: Daniela Calzetti
+  image: /images/user.png  
+- name: Linda Smith
+  image: /images/user.png  
 - name: Helena Faustino Vieira
   role: Postdoc
   image: /images/user.png
