--- a/_data/team.yml
+++ b/_data/team.yml
@@ -38,7 +38,7 @@
 - name: Alex Pedrini
   institution: Stockholm University 
   role: PhD Student
-  image: /images/user.png
+  image: /images/AlexPedrini.JPG
 - name: Benjamin Gregg
   institution: UMass Amherst
   role: PhD Student
