--- a/_data/team.yml
+++ b/_data/team.yml
@@ -47,3 +47,7 @@
   institution: Stockholm University 
   role: PhD Student
   image: /images/user.png
+- name: Drew Lapeer
+  institution: UMass Amherst
+  role: PhD Student
+  image: /images/user.png
