--- a/_data/team.yml
+++ b/_data/team.yml
@@ -13,7 +13,7 @@
   image: /images/user.png  
 - name: Arjan Bik
   institution: Stockholm University 
-  image: /images/user.png  
+  image: /images/ArjanBik.jpg  
 - name: Giacomo Bortolini
   institution: Stockholm University 
   image: /images/user.png
