--- a/_data/team.yml
+++ b/_data/team.yml
@@ -39,7 +39,7 @@
   image: /images/user.png  
 - name: Helena Faustino Vieira
   institution: Stockholm University 
-  image: /images/user.png
+  image: /images/HFV.jpg
 - name: John S. Gallagher
   institution: University of Wisconsin-Madison
   image: /images/user.png 
